# avin

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  dev  index.html  pyproject.toml  rustfmt.toml
avin/: Cargo.toml
avin/src/: lib.rs
avin_adviser/: Cargo.toml
avin_adviser/src/: adviser.rs  condition.rs  lib.rs  notice.rs
avin_analyse/: Cargo.toml
avin_analyse/src/: analyse.rs  bar.rs  cluster.rs  lib.rs  quantum.rs  size.rs  tic.rs  trend.rs
avin_connect/: Cargo.toml
avin_connect/src/: lib.rs
avin_connect/src/tinkoff/: broker.rs  client.rs  interceptor.rs  mod.rs
avin_connect/src/tinkoff/api/: common.rs  instruments.rs  marketdata.rs  operations.rs  orders.rs  sandbox.rs  stoporders.rs  users.rs
avin_core/: Cargo.toml
avin_core/src/: lib.rs
avin_core/src/action/: _action.rs  data_action.rs  get_account_action.rs  get_bars_action.rs  mod.rs  order_action.rs  stream_action.rs
avin_core/src/asset/: _asset.rs  asset_list.rs  category.rs  exchange.rs  iid.rs  mod.rs  share.rs
avin_core/src/broker/: account.rs  mod.rs
avin_core/src/chart/: _chart.rs  bar.rs  mod.rs  range.rs  timeframe.rs  user_data.rs
avin_core/src/data/: category.rs  data_bar.rs  data_ob.rs  data_orders.rs  data_sc_ob.rs  data_sc_order.rs  data_sc_trade.rs  data_tic.rs  data_trades.rs  exchange.rs  iid.rs  iid_cache.rs  manager.rs  market_data.rs  mod.rs  schema.rs  source.rs  source_moex.rs
avin_core/src/enums/: direction.rs  kind.rs  mod.rs  timeframe.rs
avin_core/src/event/: _event.rs  bar_event.rs  mod.rs  ob_event.rs  order_event.rs  tic_event.rs
avin_core/src/footprint/: _footprint.rs  cluster.rs  mod.rs  quant.rs  quantum.rs  tic.rs
avin_core/src/indicator/: _indicator.rs  extremum.rs  mod.rs
avin_core/src/operation/: _operation.rs  mod.rs  transaction.rs
avin_core/src/order/: _order.rs  direction.rs  limit_order.rs  market_order.rs  mod.rs  stop_order.rs
avin_core/src/order_book/: mod.rs  ob.rs
avin_core/src/trade/: _trade.rs  mod.rs  summary.rs  trade_list.rs
avin_data/: Cargo.toml  LICENSE  __init__.py  cli.py  conf.py  pyproject.toml
avin_data/data/: __init__.py  category.py  manager.py  source_moex.py
avin_data/src/: bar.rs  category.rs  cli.rs  data.rs  data_bar.rs  data_ob.rs  data_orders.rs  data_tic.rs  data_trades.rs  exceptions.py  iid.rs  iid_cache.rs  lib.rs  main.rs  manager.rs  market_data.rs  schema.rs  source.rs  source_moex.rs  source_tinkoff.rs
avin_data/src/connect/: source_moex.py  source_tinkoff.py
avin_data/src/manager/: category.py  data_file_bar.py  data_file_tic.py  iid_cache.py  manager.py  market_data.py  source.py
avin_data/src/utils/: __init__.py  cmd.py  conf.py
avin_data/utils/: __init__.py  misc.py
avin_data_py/: pyproject.toml
avin_data_py/avin_data/connect/: source_moex.py  source_tinkoff.py
avin_data_py/avin_data/manager/: iid.py  market_data.py
avin_data_py/tests/: test_data.py  test_utils.py
avin_filter/: Cargo.toml
avin_filter/src/: example.rs  filter.rs  lib.rs  marker.rs
avin_gui/: Cargo.toml
avin_gui/src/: chart_widget.rs  draw.rs  lib.rs  terminal.rs  tester.rs  theme.rs
avin_gui/src/asset/: mod.rs  widget.rs
avin_gui/src/chart/: draw.rs  mod.rs  theme.rs  toolbar.rs  view.rs  widget.rs
avin_gui/src/scanner/: _scanner.rs  mod.rs  scan_table.rs  view.rs
avin_gui/src/scene/: gitem.rs  item.rs  mod.rs
avin_gui/src/simulator/: gui_simulator.rs  mod.rs
avin_gui/src/terminal/: _terminal.rs  asset_widget.rs  gui_terminal.rs  mod.rs
avin_gui/src/test/: mod.rs  widget.rs
avin_gui/src/tester/: _tester.rs  mod.rs  summary_table.rs  test_table.rs  toolbar.rs  trade_table.rs  view.rs
avin_scanner/: Cargo.toml
avin_scanner/src/: example.rs  lib.rs  scanner.rs
avin_search/: Cargo.toml
avin_search/src/: condition.rs  filter_result.rs  point.rs
avin_simulator/: Cargo.toml
avin_simulator/src/: app.rs  lib.rs  main.rs  simulator.rs
avin_strategy/: Cargo.toml
avin_strategy/src/: _strategy.rs  buy_sell.rs  every.rs  lib.rs  pin_bar.rs  scanner.rs
avin_strategy/src/examples/: big_trend.rs  big_trend_long.rs  big_trend_short.rs  buy_sell.rs  mod.rs  pin_bar.rs
avin_strategy/src/scanner/: mod.rs
avin_strategy/src/simulator/: _simulator.rs  mod.rs
avin_strategy/src/strategy/: mod.rs
avin_strategy/src/strategy/examples/: buy_sell.rs  pin_bar.rs
avin_terminal/: Cargo.toml
avin_terminal/src/: lib.rs  main.rs  message.rs  terminal.rs
avin_tester/: Cargo.toml
avin_tester/src/: _tester.rs  data_stream.rs  lib.rs  test.rs  test_list.rs  virtual_broker.rs
avin_trader/: Cargo.toml
avin_trader/src/: lib.rs  trader.rs  work.rs
avin_utils/: Cargo.toml
avin_utils/src/: cmd.rs  conf.rs  constant.rs  error.rs  informer.rs  lib.rs  logger.rs  misc.rs  timer.rs
frontend/: index.html
note/: 20251123_backlog_lite.md  deployment.md  product.adoc
res/: config.toml  default_config.toml
res/assets/: sw.js
src/: conf.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/analytic/: analytic.rs  cluster.rs  mod.rs  trend.rs  volume.rs
src/core/: action.rs  bar.rs  chart.rs  claster.rs  cluster.rs  direction.rs  footprint.rs  mod.rs  quant.rs  quantum.rs  range.rs  tic.rs  timeframe.rs  work.rs
src/data/: category.rs  data_file_bar.rs  data_file_tic.rs  error.rs  iid.rs  iid_cache.rs  manager.rs  market_data.rs  mod.rs  source_moex.rs
src/extra/: mod.rs  size.rs  size.rs.bak  term.rs  trend.rs
src/gui/: mod.rs  terminal.rs
src/strategy/: every.rs  mod.rs  t_1m_t1.rs
src/tester/: data_stream.rs  test.rs  tester.rs  virtual_broker.rs
src/tinkoff/: broker.rs  mod.rs
src/trader/: mod.rs  trader.rs  work.rs
src/utils/: cmd.rs  logger.rs  misc.rs  mod.rs  timer.rs
src_py/: __init__.py  conf.py  const.py  requirements.txt  venv_create  venv_start
src_py/data/: __init__.py  category.py  data_file_bar.py  data_file_tic.py  iid.py  iid_cache.py  manager.py  market_data.py  source_moex.py
src_py/tests/: pyproject.toml  test_data.py  test_utils.py
src_py/utils/: __init__.py  cmd.py  logger.py  misc.py
(+13 files in other folders)
