[workspace]
resolver = "3"
members = [
    "src-tauri",
    "avin_adviser",
    "avin_analyse",
    "avin_connect",
    "avin_core",
    "avin_data",
    "avin_filter",
    "avin_gui",
    "avin_simulator",
    "avin_strategy",
    "avin_terminal",
    "avin_tester",
    "avin_trader",
    "avin_utils",
]

[workspace.package]
description = "Open source cross-platform trading system"
version = "0.4.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Alex Avin <mr.alexavin@gmail.com>"]
repository = "https://github.com/arsvincere/avin"
homepage = "https://avin.info"
keywords = [ "algorithmic-trading", "trading", "moex" ]
categories = ["finance"]

[workspace.dependencies]
avin =              { version = "0.4.0", path = "src-tauri" }
avin_adviser =      { version = "0.4.0", path = "avin_adviser" }
avin_analyse =      { version = "0.4.0", path = "avin_analyse" }
avin_connect =      { version = "0.4.0", path = "avin_connect" }
avin_core =         { version = "0.4.0", path = "avin_core" }
avin_data =         { version = "0.4.0", path = "avin_data" }
avin_gui =          { version = "0.4.0", path = "avin_gui" }
avin_filter =       { version = "0.4.0", path = "avin_filter" }
avin_simulator =    { version = "0.4.0", path = "avin_simulator" }
avin_strategy =     { version = "0.4.0", path = "avin_strategy" }
avin_terminal =     { version = "0.4.0", path = "avin_terminal" }
avin_tester =       { version = "0.4.0", path = "avin_tester" }
avin_trader =       { version = "0.4.0", path = "avin_trader" }
avin_utils =        { version = "0.4.0", path = "avin_utils" }

bitcode = "0.6.7"
cached = "0.56.0"
chrono = "0.4.41"
flume = "0.11.1"
log = "0.4.27"
polars = { version = "0.51", features = [
    "cum_agg",
    "describe",
    "is_in",
    "lazy",
    "parquet",
    "temporal",
    "polars-io",
] }
prost = "0.12"
prost-types = "0.12"
reqwest = "0.12.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"]}
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
time-unit = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip"] }
uuid = {version = "1.16.0", features = [ "v4" ]}

##############################################################################
# old dependencies, del it after refactorin gui
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui-file-dialog = "0.11.0"
egui_extras = { version= "0.32.3", features = ["all_loaders", "image", "svg"]}
egui_plot = "0.33.0"
##############################################################################
