[package]
name = "avin"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = {workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_analyse = { workspace = true }
avin_connect = { workspace = true }
avin_core = { workspace = true }
avin_gui = { workspace = true }
avin_strategy = { workspace = true }
avin_tester = { workspace = true }
avin_trader = { workspace = true }
avin_utils = { workspace = true }
# tmp dependencies del it after release ######################################
polars = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
eframe = { workspace = true }
##############################################################################

# [[bin]]
# name = "analyse"
# path = "src/bin/a-analyse.rs"
# [[bin]]
# name = "backtest"
# path = "src/bin/a-backtest.rs"
# [[bin]]
# name = "etester"
# path = "src/bin/a-tester.rs"
# [[bin]]
# name = "trader"
# path = "src/bin/a-trader.rs"
# [[bin]]
# name = "eterminal"
# path = "src/bin/a-terminal.rs"
