[package]
name = "avin_adviser"
description = "Simple adviser, part of 'avin' library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_analyse = { workspace = true }
avin_connect = { workspace = true }
avin_core = { workspace = true }
avin_data = { workspace = true }
avin_utils = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
