[package]
name = "avin_core"
description = "Core of the Avin Trade System library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_utils = { workspace = true }
bitcode = { workspace = true}
cached = { workspace = true}
chrono = { workspace = true}
log = { workspace = true}
polars = { workspace = true}
strum = { workspace = true}
time-unit = { workspace = true}

