[package]
name = "avin_gui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = {workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_analyse = { workspace = true }
avin_connect = { workspace = true }
avin_core = { workspace = true }
avin_tester = { workspace = true }
avin_utils = { workspace = true }
chrono = { workspace = true }
eframe = { workspace = true }
egui-file-dialog = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
