[package]
name = "avin_gui"
description = "GUI utils for 'avin' library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_analyse = { workspace = true }
avin_connect = { workspace = true }
avin_core = { workspace = true }
avin_data = { workspace = true }
avin_filter = { workspace = true }
avin_simulator = { workspace = true }
avin_strategy = { workspace = true }
avin_tester = { workspace = true }
avin_utils = { workspace = true }
chrono = { workspace = true }
eframe = { workspace = true }
egui-file-dialog = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
