[package]
name = "avin_strategy"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = {workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_core = { workspace = true }
avin_utils = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
