[package]
name = "avin_tester"
description = "Simple back tester, part of 'avin' library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_core = { workspace = true }
avin_data = { workspace = true }
avin_strategy = { workspace = true }
avin_utils = { workspace = true }
bitcode = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
