[package]
name = "avin_trader"
description = "Strategy launcher, part of 'avin' library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
avin_connect = { workspace = true }
avin_core = { workspace = true }
avin_data = { workspace = true }
avin_strategy = { workspace = true }
avin_utils = { workspace = true }

tokio = { workspace = true }
log = { workspace = true }
