[package]
name = "avin_utils"
description = "Utils for the 'avin' library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
