[package]
name = "avin"
description = {workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../README.md"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see
# https://github.com/rust-lang/cargo/issues/8519
name = "avin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
avin_adviser = { workspace = true }
avin_analyse = { workspace = true }
avin_connect = { workspace = true }
avin_core = { workspace = true }
avin_data = { workspace = true }
avin_search = { workspace = true }
avin_gui = { workspace = true }
avin_simulator = { workspace = true }
avin_strategy = { workspace = true }
avin_tester = { workspace = true }
avin_trader = { workspace = true }
avin_terminal = { workspace = true }
avin_utils = { workspace = true }

tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

##############################################################################
# tmp dependencies del it after release
polars = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
eframe = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
##############################################################################
